--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "## Fork",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,8 @@
   },
   "homepage": "https://github.com/maite-l/fake-door-starter#readme",
   "dependencies": {
-    "js-confetti": "^0.11.0"
+    "js-confetti": "^0.11.0",
+    "save-dev": "^0.0.1-security",
+    "vite": "^3.2.0"
   }
 }
